fix: text wrap

--- a/QualarooMobileSDK.framework/qualaroo-custom.css
+++ b/QualarooMobileSDK.framework/qualaroo-custom.css
@@ -295,8 +295,7 @@ div#qual_ol form.qual_ol_ans_box.vertical-arrangement {
 div#qual_ol form.qual_ol_ans_box.vertical-arrangement .qual_ol_ans_item {
     text-align: left;
     margin: 0 0 10px 0;
-    white-space: pre;
-    overflow-wrap: break-word;
+    white-space: normal;
 }
 
 div#qual_ol form.qual_ol_ans_box.vertical-arrangement .qual_ol_ans_item:last-child {
